# error_tolerance

./: CMakeLists.txt  README.md  TODO list.docx  create_chakra_gen.py  fix_chakra.py  main.cpp  performance model.md  reorganize_pyscript.py  result.docx  实验计划.docx
astra/: analyze_analytical_output.py  analyze_ns3_output.py  astra_analytical_batch.sh  astra_ns3_batch.sh  chakra_batch.sh
astra-sim-guide/: Chakra guide.md  network_yml.md  remote_memory_json.md  system_json.md
configuration/: 5nm.txt  CONFIG_FINFET_ANALYSIS.md  Config_FINFET.txt  Config_variety.txt  auto_generate.txt  component_configuration.txt  optimal_wafer.txt  常见芯片组件规格.docx
docs/: BUG_REPORT.md  COMPLETE_WORKFLOW_ANALYSIS.md  CONFIG_FINFET_ANALYSIS.md  NEW_FEATURES_DOCUMENTATION.md  REORGANIZATION_COMPLETE.md  SA_IMPLEMENTATION_SUMMARY.md  SA_INTEGRATION_GUIDE.md  SIMULATED_ANNEALING_GUIDE.md  VALIDATION_GUIDE.md  workload_to_astra_sim.md
include/: Analysis.h  Astra_API.h  Attention.h  Communication.h  Compute.h  Die.h  Distance.h  Generate.h  Macro.h  Memory.h  Optimal.h  Permutation.h  Pipeline.h  Recompute.h  Scan.h  Simulated_Annealing.h  Wafer.h  Workload.h
matlab/: DSE_size.m  README.md  SOPC.m  economic.m  error_fit.m  explosion.m  perf_SA.m  performance.m  speed_up.m  stair.m  time_cost.m  visualize.m
pyscript/: chakra_workload_generator.py  gen_config_txt.py  gen_logical_network.py  gen_network.py  gen_system.py  select_fast_wafers.py  simulated_annealing_ns3.py  visualize_die.py  wafer_utils.py
scripts/: generate_all_configs.sh  run_astra_analytical_batch_from_wafer.sh  run_astra_analytical_vm.sh  run_ns3_batch_from_possible_optimal.sh  run_simulated_annealing.sh  simulated_annealing_main.cpp
src/: Analysis.cpp  Astra_API.cpp  Attention.cpp  CMakeLists.txt  Chakra_Workload_Generator.cpp  Communication.cpp  Compute.cpp  Die.cpp  Distance.cpp  Generate.cpp  Memory.cpp  Optimal.cpp  Permutation.cpp  Pipeline.cpp  Recompute.cpp  Scan.cpp  Simulated_Annealing.cpp  Wafer.cpp  Workload.cpp  generate_json.py  generate_logical_network.py  generate_network.py
test/: Analysis_test.cpp  Astra_API_test.cpp  Attention_test.cpp  CMakeLists.txt  Communication_test.cpp  Compute_test.cpp  Die_test.cpp  Distance_test.cpp  Generate_test.cpp  Memory_test.cpp  Optimal_test.cpp  Permutation_test.cpp  Pipeline_test.cpp  Recompute_test.cpp  Scan_test.cpp  Simulated_Annealing_test.cpp
workloads/: Llama_3B.txt
